--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "babel-core": "6.10.4",
+    "babel-core": "^6.11.4",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.2",
@@ -167,11 +167,12 @@
     "coveralls": "2.11.11",
     "cross-env": "2.0.0",
     "css-loader": "0.23.1",
+    "david": "^7.0.2",
     "enzyme": "2.4.1",
     "eslint": "3.1.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-import-resolver-webpack": "0.4.0",
-    "eslint-plugin-import": "1.11.0",
+    "eslint-plugin-import": "^1.11.1",
     "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "5.2.2",
     "eventsource-polyfill": "0.9.6",
